--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,4 +1,13 @@
 /*
    Import partials below
 */
-@import './normalize';
+@import 'libs/fonts';
+@import 'helpers/variables';
+@import 'helpers/mixins';
+@import 'helpers/placeholders';
+@import 'libs/normalize';
+@import 'libs/base';
+@import 'shared/button';
+
+/* Components */
+@import 'components/container';
