--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -13,3 +13,5 @@ $main-text-color: #444444;
 $semi-text-color: #464646;
 $footer-text-color: #9699a6;
 $legal-text-color: #626263;
+$hamburger-background-color: #824fe3;
+$line-color: #fcae26;
