--- a/src/sass/libs/base.scss
+++ b/src/sass/libs/base.scss
@@ -18,3 +18,26 @@ img {
   width: 100%;
   height: auto;
 }
+
+a {
+  text-decoration: none;
+}
+
+.list {
+  list-style: none;
+}
+
+ul {
+  padding-left: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
