--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -11,3 +11,7 @@
 
 /* Components */
 @import 'components/container';
+@import 'components/banner.scss';
+@import 'components/header.scss';
+@import 'components/promo.scss';
+@import 'components/scroll_down.scss';
