--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -15,3 +15,5 @@ $footer-text-color: #9699a6;
 $legal-text-color: #626263;
 $hamburger-background-color: #824fe3;
 $line-color: #fcae26;
+$accent-btn-color: #f39313;
+$light-btn-color: #f6f9fa;
