--- a/src/sass/components/promo.scss
+++ b/src/sass/components/promo.scss
@@ -8,87 +8,85 @@
   bottom: 130px;
   left: 50%;
   transform: translateX(-50%);
+
+  @media screen and (min-width: 1920px) {
+    left: 30%;
+  }
 }
 
 .promo__header {
-  text-align: center;
+  margin-bottom: 6px;
   font-size: 35px;
   font-family: $title-ff;
-  color: $light-color;
   font-weight: 700;
-  margin-bottom: 26px;
+  line-height: 60px;
+  letter-spacing: 0.025em;
+  color: $light-color;
+  text-align: center;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 18px;
+    font-size: 45px;
+  }
+
+  @media screen and (min-width: 1920px) {
+    margin-bottom: 40px;
+    margin-left: -140px;
+    font-size: 65px;
+  }
 }
 
 .promo__shadow {
-  background-color: rgba(14, 17, 27, 0.67);
   min-width: 278px;
   padding: 5px 0px;
+  background-color: rgba(14, 17, 27, 0.67);
+
+  @media screen and (min-width: 768px) {
+    width: 444px;
+    padding: 2px 0px;
+  }
+
+  @media screen and (min-width: 1920px) {
+    width: 460px;
+    padding: 10px;
+  }
 }
 
 .promo__text {
   position: relative;
+  margin-left: 20px;
   font-family: $main-ff;
   font-size: $main-fz;
   font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0.05em;
   color: $light-color;
-  margin-left: 20px;
-  line-height: 1.4;
+
+  @media screen and (min-width: 768px) {
+    font-size: 27px;
+    line-height: 32px;
+  }
+
+  @media screen and (min-width: 1920px) {
+    margin-left: 50px;
+    font-size: 25px;
+    line-height: 35px;
+  }
+
+  @media screen and (min-width: 1920px) {
+    &::before {
+      position: absolute;
+      left: -25px;
+      display: block;
+      width: 100%;
+      height: 100%;
+      content: "";
+      border-left: 3px solid $line-color;
+    }
+  }
 }
 
-.promo__text_yellow {
-  font-family: $subtitle-ff;
-  font-size: $main-fz;
+.promo__text--yellow {
   font-weight: 700;
   color: $line-color;
-}
-
-@media screen and (min-width: 768px) {
-  .promo__shadow {
-    width: 408px;
-    padding: 0;
-  }
-
-  .promo__header {
-    font-size: 45px;
-  }
-
-  .promo__text,
-  .promo__text_yellow {
-    font-size: 27px;
-  }
-}
-
-@media screen and (min-width: 1920px) {
-  .promo {
-    left: 30%;
-  }
-
-  .promo__header {
-    font-size: 65px;
-    margin-left: -140px;
-  }
-
-  .promo__shadow {
-    width: 460px;
-    padding: 10px;
-  }
-
-  .promo__text::before {
-    position: absolute;
-    display: block;
-    content: "";
-    border-left: 3px solid $line-color;
-    width: 100%;
-    height: 100%;
-    left: -25px;
-  }
-
-  .promo__text,
-  .promo__text_yellow {
-    font-size: 25px;
-  }
-
-  .promo__text {
-    margin-left: 50px;
-  }
 }
