Footer without media

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -11,7 +11,8 @@
 
 /* Components */
 @import 'components/container';
-@import 'components/banner.scss';
-@import 'components/header.scss';
-@import 'components/promo.scss';
-@import 'components/scroll_down.scss';
+@import 'components/banner';
+@import 'components/header';
+@import 'components/promo';
+@import 'components/scroll_down';
+@import 'components/footer';
