Added program and courses sections

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -15,3 +15,5 @@
 @import 'components/header.scss';
 @import 'components/promo.scss';
 @import 'components/scroll_down.scss';
+@import 'components/program';
+@import 'components/courses';
