--- a/src/sass/components/courses.scss
+++ b/src/sass/components/courses.scss
@@ -1,6 +1,3 @@
-.courses__title-container {
-}
-
 .courses__title {
   position: relative;
   margin: 0 0 6px;
@@ -22,7 +19,7 @@
 }
 
 .courses__title::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 50%;
   left: 0;
@@ -30,7 +27,7 @@
   width: 33px;
   height: 33px;
   border-radius: 50%;
-  background-image: url(../images/icons/icon.png);
+  background-image: url(../images/icon.png);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -40,15 +37,15 @@
   margin: 0;
   list-style: none;
 
-  @media screen and (min-width: 768px) and (max-width: 1919px) {
-    @include flex-direction("wrap-around");
+  @media screen and (min-width: 768px) {
+    @include flex-direction('center');
+    flex-wrap: wrap;
   }
 }
 
 .courses__card-item {
-  @include flex-direction("center");
+  @include flex-direction('center');
   min-height: 225px;
-  margin-bottom: 12px;
   background-color: #fafafa;
   border-radius: 5px;
   transition: all 200ms linear;
@@ -65,16 +62,19 @@
   }
 
   &:hover .courses__card-age--sup::after {
-    background-image: url(../images/icon/arrow-white-mob);
+    background-image: url(../images/arrow-white-mob.png);
+  }
+
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 12px;
+    }
   }
 
   @media screen and (min-width: 767px) {
     &:hover .courses__card-age--sup::after {
-      background-image: url(../images/icon/arrow-white);
-    }
-
-    &:not(:last-child) {
-      margin-bottom: 12px;
+      background-image: url(../images/arrow-white.png);
+      width: 39px;
     }
   }
 
@@ -90,6 +90,14 @@
 
 .courses__card-item__wrapper {
   width: 200px;
+
+  @media screen and (min-width: 768px) {
+    width: 220px;
+  }
+
+  @media screen and (min-width: 1920px) {
+    width: 245px;
+  }
 }
 
 .courses__card-title {
@@ -152,10 +160,10 @@
 
   &::after {
     display: block;
-    content: "";
+    content: '';
     margin-top: 47px;
     width: 19px;
     height: 13px;
-    background-image: url(../images/icons/arrow.png);
+    background-image: url(../images/arrow.png);
   }
 }
