Added section 2 and section 3

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -11,9 +11,11 @@
 
 /* Components */
 @import 'components/container';
-@import 'components/banner.scss';
-@import 'components/header.scss';
-@import 'components/promo.scss';
-@import 'components/scroll_down.scss';
+@import 'components/banner';
+@import 'components/header';
+@import 'components/promo';
+@import 'components/scroll_down';
 @import 'components/program';
 @import 'components/courses';
+@import 'components/section2';
+@import 'components/section3';
