--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -1,12 +1,12 @@
 
-.footer {
-  min-height: 574px;
-  background: linear-gradient(#222222 85%, #151515 85%, #151515 100%);
+.footer-main {
+  height: 474px;
+  background-color: #222222;
   padding: 43px 0px 0px 45px;
   position: relative;
   @media screen and (min-width: 768px) {
-   min-height: 300px;
-   padding: 55px 0px 0px 35px;
+  height: 250px;
+   padding: 55px 0px 0px 0px;
   }
   @media screen and (min-width: 1920px) {
     padding: 55px 0px 0px 0px;
@@ -16,8 +16,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 38px;
-  height: 38px;
+  width: 50px;
+  height: 50px;
   border-radius: 25px;
   background-color: #333333;
   visibility: hidden;
@@ -25,12 +25,12 @@
   @media screen and (min-width: 768px) {
     visibility: visible;
     top: -15px;
-    left: 635px;
+    left: 705px;
   }
   @media screen and (min-width: 1920px) {
     visibility: visible;
     top: 230px;
-    left: 1240px;
+    left: 1740px;
   }
 }
 .footer-button__up--item svg{
@@ -46,18 +46,28 @@
     margin-bottom: 28px;
   }
 }
+.footer-wrapper {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  
+  }
+  @media screen and (min-width: 1920px){
+    width: 1150px
+  }
+}
 .footer-list {
+  list-style: none;
+  margin: 0 auto;
   @media screen and (min-width: 768px) {
     width: 620px;
     display: flex;
-    justify-content: space-between;
   }
 }
 .footer-list__text {
   color: $footer-text-color;
   font-size: 14px;
   font-family: $main-ff;
-  line-height: 2;
+  line-height: 25px;
   @media screen and (min-width: 768px) {
     display: flex;
   }
@@ -66,7 +76,7 @@
   margin-bottom: 28px;
   width: 160px;
   @media screen and (min-width: 768px){
-    margin-right: 52px;
+    margin-right: 120px;
   }
   @media screen and (min-width: 1920px) {
     margin-right: 145px;
@@ -79,34 +89,22 @@
     margin-right: 160px;
   }
 }
-.footer-list__btn {
-  width: 192px;
-  height: 42px;
-  border: none;
-  border-radius: 5px;
-  background-color: $accent-color;
-  color: $light-color;
-  font-family: $title-ff;
-  font-size: 16px;
-  transition: background-color 400ms;
+.footer-button {
+  margin: 0 auto;
   margin-bottom: 34px;
-  &:hover,
-  &:focus {
-    background-color: $accent-btn-color;
-  }
   @media screen and (min-width: 768px) {
-    margin-bottom: 22px;
-  }
-  @media screen and (min-width: 1920px) {
-    margin-right: 163px;
-  }
+     margin-bottom: 22px;
+   }
+   @media screen and (min-width: 1920px) {
+ margin-right: 163px;
+ }
+}
+.footer-button a {
+  color: $light-color;
+  width: 192px;
+  height: 50px;
 }
 .footer-list__items {
-  @media screen and (min-width: 768px){
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
   @media screen and (min-width: 1920px) {
     display: flex;
     flex-direction: row;
@@ -114,6 +112,8 @@
   }
 }
 .footer-list__icons {
+  margin: 0;
+  list-style: none;
   display: flex;
   justify-content: space-between;
   width: 150px;
@@ -121,37 +121,52 @@
 }
 
 .footer-list__icons--item svg {
-  width: 25px;
-  height: 25px;
+  display: block;
+  width: 23px;
+  height: 23px;
   fill: $light-color;
 }
-.footer-list__icons a {
+.item {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 38px;
   height: 38px;
   border-radius: 25px;
-  background-color: #6398e0;
-  &:nth-child(2n) {
+  &:hover,
+  &:focus {
+    background-color: #6398e0;
+  }
+  &:nth-child(2):hover {
     background-color: #3b4e70;
   }
-  &:last-child {
+  &:nth-child(3):hover {
     background-color: #9f2431;
   }
 }
-.footer-occupation { 
-  padding-bottom: 23px; 
+
+.footer-legal { 
+  padding: 25px 0px 0px 45px;
+  height: 100px; 
+  background-color: #151515;
   @media screen and (min-width: 768px) {
-  padding: 15px 0px;
-  width: 576px;
+  height: 50px;
+  padding: 0px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   }
 }
-.footer-occupation__link {
-  line-height: 1.5;
+.footer-legal__list {
+  list-style: none;
+  margin: 0;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    width: 576px;
+    justify-content: space-between;
+  }
+}
+.footer-legal__list--link {
+  line-height: 25px;
   font-size: 12px;
   font-family: $legal-ff;
   color: $legal-text-color;
