--- a/src/sass/components/section3.scss
+++ b/src/sass/components/section3.scss
@@ -1,99 +1,147 @@
-.new__list {
+.structure__list {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
+  list-style: none;
+  padding-left: 10px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    padding-left: 10px;
+  }
+  @media screen and (min-width: 1920px) {
+    display: flex;
+    flex-wrap: nowrap;
+  }
 }
 
-.title1 {
+.structure__title1 {
   position: relative;
-  margin-top: 116px;
-  color: $main-dark-color;
+  margin: 0 0 6px;
+  margin-top: 40px;
+  padding-left: 38px;
   font-family: $title-ff;
-  text-transform: uppercase;
-  font-size: 33px;
-  font-weight: 700;
+  font-size: 20px;
   line-height: 78px;
-  margin-bottom: 70px;
-  padding-right: 80px;
+  text-transform: uppercase;
+  color: $main-dark-color;
+ 
+  @media screen and (min-width: 768px) {
+    margin-bottom: 70px;
+    margin-top: 66px;
+    font-size: 33px;
+  }
 }
 
-.new__list-info:not(:nth-last-child(-n + 2)) {
+.structure__list-info {
   margin-bottom: 25px;
+  
+  @media screen and (min-width: 768px) {
+    margin-right: 25px;
+  }
+
+  @media screen and (min-width: 1920px) {
+    justify-content: space-between;
+    margin-right: 34px;
+  }
 }
 
 .number2::before {
   content: '';
-  display: inline-block;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
   width: 30px;
   height: 30px;
   border-radius: 50%;
   background-color: #fcae26;
-  background-image: url(../images/icon2.png);
-  position: absolute;
-  top: 22px;
-  left: -50px;
+  background-image: url(../images/icon.png);
+  background-repeat: no-repeat;
+  background-position: center;
+
+  @media screen and (min-width: 768px) {
+    background-image: url(../images/icon2.png);
+  }
 }
 
 .title-icons {
   position: absolute;
-  fill: $light-color;
   top: 0;
   left: 0;
   transform: translateX(50%);
   list-style: none;
-  width: 30px;
-  height: 30px;
+  width: 33px;
+  height: 33px;
   border-radius: 50%;
+  fill: $light-color;
   background-color: #fcae26;
 }
 
-.new__list-info {
+.structure__list-info {
   border-radius: 0 29px 0 29px;
   padding: 15px 15px 15px 15px;
-  width: 300px;
-  height: 295px;
+  min-width: 280px;
+  min-height: 260px;
+
+  @media screen and (min-width: 1920px) {
+    width: 300px;
+    height: 293px;
+  }
 }
 
-.info-inner {
+.structure__info--inner {
   border: 1px dashed #fff;
   height: 100%;
   width: 100%;
   border-radius: 0 29px 0 29px;
   padding: 20px 18px 18px 20px;
-  height: 260px;
+  width: 250px;
+  height: 230px;
+  
+  @media screen and (min-width: 768px) {
+    padding: 20px 18px 18px 20px;
+  }
+
+  @media screen and (min-width: 1920px) {
+    width: 264px;
+    height: 259px;
+  }
 }
 
-.title2 {
+.structure__title2 {
   color: $main-dark-color;
   font-family: $subtitle-ff;
-  font-size: 30px;
+  font-size: 25px;
+  line-height: 27px;
+  padding-top: 20px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 30px;
+  }
 }
 
-.new-list__text {
-  margin-top: 20px;
-  width: 230px;
-  font-family: $subtitle-ff;
-  font-size: 18px;
-  font-weight: 300;
+.structure__text {
+  margin-top: 22px;
+  width: 184px;
+  font-family: $main-ff;
+  font-size: 16px;
+  line-height: 22px;
   color: $semi-text-color;
-}
+  padding-bottom: 20px; 
 
-.new__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-between;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  list-style: none;
-  margin-bottom: 116px;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    left: 22px;
+    min-width: 180px;
+  }
+  @media screen and (min-width: 1920px) {
+    font-size: 18px;
+    line-height: 28px;
+    width: 210px;
+    padding-bottom: 20px; 
+  }
 }
 
 .part1 {
